Nav: Edit bug - nav active class flicker phenomenon

--- a/src/nav/nav.css
+++ b/src/nav/nav.css
@@ -50,7 +50,7 @@ nav {
   display: flex;
   height: 100%;
   align-items: center;
-  margin: 0 10px;
+  margin: 0 15px;
   padding: 0 7px;
   cursor: pointer;
   transition: all 0.2s ease;
